made changes to CSS for header

--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta charset="UTF-8">
     <title>My New Website</title>
   </head>
-  <body>
-      <div>
-          <ul class="navbar">
-              <li class="navbar">github</li>
-              <li class="navbar">portfolio</li>
-              <li class="navbar">contact</li>
-            </ul>
-        </div>
-        
+    <header class="navbar">
+        <body>
+            <div>
+                <ul>
+                    <li class="navlink">Github</li>
+                    <li class="navlink">Portfolio</li>
+                    <li class="navlink">Contact</li>
+                    </ul>
+                </div>
+    </header>
     <h1>My New Website</h1>
     
         <div>
